# slide-controller

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json  partitions.csv  sdkconfig  sdkconfig.baie  sdkconfig.birou  sdkconfig.common  sdkconfig.dormitor  sdkconfig.dormitor2  sdkconfig.garaj2  sdkconfig.living  sdkconfig.oaspeti2  sdkconfig.scara-jos  sdkconfig.scara-sus  sdkconfig.wifi
components/bme280/: CMakeLists.txt  bme280Sensor.cpp
components/bme280/include/: internal-sensor.h
components/bme680/: CMakeLists.txt
components/bme680/include/: internal-sensor.h
components/events/: CMakeLists.txt
components/events/include/: events.h
components/sc-backlight/: CMakeLists.txt  backlight.cpp  backlight.h
components/sc-bme280/: CMakeLists.txt  bme280Sensor.cpp
components/sc-bme280/include/: bme280Sensor.h
components/sc-bme680/: CMakeLists.txt  bme680Sensor.cpp
components/sc-bme680/include/: bme680Sensor.h
components/sc-buzzer/: CMakeLists.txt  buzzer.cpp
components/sc-buzzer/include/: buzzer.h
components/sc-events/: events.cpp
components/sc-events/include/: events.h
components/sc-mqtt/: CMakeLists.txt  mqtt.cpp  ota.cpp
components/sc-sensors/: CMakeLists.txt  sensors.cpp
components/sc-sensors/include/: sensors.h
components/wc-bme280/: CMakeLists.txt
components/wc-bme680/: CMakeLists.txt
components/wc-buzzer/: buzzer.cpp
components/wc-events/: CMakeLists.txt  events.cpp
components/wc-events/include/: events.h
components/wc-mqtt/: CMakeLists.txt  mqtt.cpp
components/wc-mqtt/include/: mqtt.h
components/wc-sensors/: CMakeLists.txt  sensors.cpp
components/wc-sensors/include/: sensors.h
main/: CMakeLists.txt  Kconfig.projbuild  backlight.cpp  bme-sensor.h  bme280-sensor.cpp  bme280Sensor.cpp  bme680-sensor.cpp  bme680Sensor.cpp  buzzer.cpp  buzzer.h  dht.cpp  dht.cpp.old  dht.h  display.cpp  display.h  events.cpp  events.h  hello_world_main.c  mainpanel.cpp  mainpanel.h  modbus.cpp  modbus.md  mq135.cpp  mq135.h  mqtt.cpp  mqtt.h  noSensor.h  ota.cpp  rs485.cpp  sensors.cpp  sensors.h  slide-controller.cpp  statusbar.cpp  statusbar.h  touch.cpp  wall-controller.cpp  wifi.cpp
main/gui/: lightbulb.c  lightbulb_outline.c  monofur.c
